[gd_scene load_steps=15 format=3 uid="uid://bkqdxgprtn8lc"]

[ext_resource type="Script" uid="uid://vwr2rs41pu81" path="res://Scripts/Spells/area_burst_spell.gd" id="1_hoefv"]
[ext_resource type="Texture2D" uid="uid://bse30xn08tgh" path="res://Sprites/Effect and FX Pixel All Free/Free/Part 2/71.png" id="2_hoefv"]

[sub_resource type="AtlasTexture" id="AtlasTexture_of5qj"]
atlas = ExtResource("2_hoefv")
region = Rect2(0, 320, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_dsg6g"]
atlas = ExtResource("2_hoefv")
region = Rect2(64, 320, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_3t1r6"]
atlas = ExtResource("2_hoefv")
region = Rect2(128, 320, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_wgkyh"]
atlas = ExtResource("2_hoefv")
region = Rect2(192, 320, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_5mpsi"]
atlas = ExtResource("2_hoefv")
region = Rect2(256, 320, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_fsvjl"]
atlas = ExtResource("2_hoefv")
region = Rect2(320, 320, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_vym6r"]
atlas = ExtResource("2_hoefv")
region = Rect2(384, 320, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_fh6pk"]
atlas = ExtResource("2_hoefv")
region = Rect2(448, 320, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_tv8xk"]
atlas = ExtResource("2_hoefv")
region = Rect2(512, 320, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_cyfvr"]
atlas = ExtResource("2_hoefv")
region = Rect2(576, 320, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_qbkfu"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_of5qj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dsg6g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3t1r6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wgkyh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5mpsi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fsvjl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vym6r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fh6pk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tv8xk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cyfvr")
}],
"loop": false,
"name": &"default",
"speed": 15.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_0djvq"]
radius = 48.0

[node name="BrutalAssault" type="Area2D"]
collision_layer = 2
collision_mask = 4
script = ExtResource("1_hoefv")
metadata/_edit_group_ = true

[node name="Animation" type="AnimatedSprite2D" parent="."]
texture_filter = 1
scale = Vector2(1.5, 1.5)
sprite_frames = SubResource("SpriteFrames_qbkfu")
autoplay = "default"
frame = 9
frame_progress = 1.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_0djvq")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="animation_finished" from="Animation" to="." method="_on_animation_animation_finished"]
